ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 1024m
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.org/client-max-body-size: 1024m
    acme.cert-manager.io/http01-edit-in-place: "true"
  name: registry-ingress
spec:
  rules:
  - host: registry.tino.sh
    http:
      paths:
      - backend:
          service:
            name: docker-registry
            port:
              number: 5000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - registry.tino.sh
    secretName: registry-tino-sh-tls
